--- a/tests/merging_yaml.ipynb
+++ b/tests/merging_yaml.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import glob\n",
     "import os\n",
-    "import yaml\n"
+    "\n",
+    "import yaml"
    ]
   },
   {
@@ -37,19 +38,28 @@
    ],
    "source": [
     "# dictionary that connects the .par file names and the respective parameter classes\n",
-    "from openptv_python.parameters import OrientPar, \\\n",
-    "    SequencePar,VolumePar,CalibrationPar, ControlPar, TargetPar, TrackPar, MultiPlanesPar\n",
+    "from openptv_python.parameters import (\n",
+    "    CalibrationPar,\n",
+    "    ControlPar,\n",
+    "    MultiPlanesPar,\n",
+    "    OrientPar,\n",
+    "    SequencePar,\n",
+    "    TargetPar,\n",
+    "    TrackPar,\n",
+    "    VolumePar,\n",
+    ")\n",
     "\n",
-    "par_dict = {'cal_ori': CalibrationPar, \n",
-    "            'detect_plate':TargetPar,\n",
-    "            'track': TrackPar,\n",
-    "            'multi_planes':MultiPlanesPar,\n",
-    "            'ptv': ControlPar,\n",
-    "            'criteria':VolumePar,\n",
-    "            'sequence':SequencePar,\n",
-    "            'targ_rec': TargetPar,\n",
-    "            'orient' : OrientPar\n",
-    "            }\n",
+    "par_dict = {\n",
+    "    \"cal_ori\": CalibrationPar,\n",
+    "    \"detect_plate\": TargetPar,\n",
+    "    \"track\": TrackPar,\n",
+    "    \"multi_planes\": MultiPlanesPar,\n",
+    "    \"ptv\": ControlPar,\n",
+    "    \"criteria\": VolumePar,\n",
+    "    \"sequence\": SequencePar,\n",
+    "    \"targ_rec\": TargetPar,\n",
+    "    \"orient\": OrientPar,\n",
+    "}\n",
     "par_dict"
    ]
   },
@@ -84,16 +94,15 @@
     }
    ],
    "source": [
-    "\n",
     "# Define the directory containing the .par files\n",
-    "directory_path = 'testing_fodder/parameters'\n",
-    "output_yaml_file = 'merged_parameters.yaml'\n",
+    "directory_path = \"testing_fodder/parameters\"\n",
+    "output_yaml_file = \"merged_parameters.yaml\"\n",
     "\n",
     "# Initialize an empty dictionary to store the merged data\n",
     "merged_data = {}\n",
     "\n",
     "# Find all .par files in the specified directory\n",
-    "par_files = glob.glob(os.path.join(directory_path, '*.par'))\n",
+    "par_files = glob.glob(os.path.join(directory_path, \"*.par\"))\n",
     "# print(par_files)\n",
     "\n",
     "# Iterate through each .par file\n",
@@ -106,21 +115,21 @@
     "    # with open(file_path, 'r') as file:\n",
     "    #     par_content = yaml.safe_load(file)\n",
     "\n",
-    "    # Here we need to read the content into a respective class and \n",
+    "    # Here we need to read the content into a respective class and\n",
     "    # store it with the paramater name as the key\n",
     "    par_class = par_dict[title]\n",
     "    par_content = par_class().from_file(file_path)\n",
     "    # par_content = par_class(**par_content)\n",
     "    print(par_content)\n",
-    "    \n",
+    "\n",
     "    # Add the dictionary to the merged data with the title as the key\n",
     "    merged_data[title] = par_content\n",
     "\n",
     "# Write the merged data to a single YAML file\n",
-    "with open(output_yaml_file, 'w') as output_file:\n",
+    "with open(output_yaml_file, \"w\") as output_file:\n",
     "    yaml.dump(merged_data, output_file, default_flow_style=False)\n",
     "\n",
-    "print(f'Merged data written to {output_yaml_file}')"
+    "print(f\"Merged data written to {output_yaml_file}\")"
    ]
   },
   {
@@ -148,14 +157,14 @@
    ],
    "source": [
     "# Define the directory containing the .par files\n",
-    "directory_path = 'testing_fodder/parameters'\n",
-    "output_yaml_file = 'merged_parameters.yaml'\n",
+    "directory_path = \"testing_fodder/parameters\"\n",
+    "output_yaml_file = \"merged_parameters.yaml\"\n",
     "\n",
     "# Initialize an empty dictionary to store the merged data\n",
     "merged_data = {}\n",
     "\n",
     "# Find all .par files in the specified directory\n",
-    "par_files = glob.glob(os.path.join(directory_path, '*.par'))\n",
+    "par_files = glob.glob(os.path.join(directory_path, \"*.par\"))\n",
     "print(par_files)\n",
     "\n",
     "file_path = par_files[0]\n",
@@ -207,7 +216,7 @@
     }
    ],
    "source": [
-    "tmp = 'file_cam%d_frame%05d.tif'\n",
+    "tmp = \"file_cam%d_frame%05d.tif\"\n",
     "print(tmp % (0, 0))"
    ]
   },
