--- a/tests/test_calibration_notebook.ipynb
+++ b/tests/test_calibration_notebook.ipynb
@@ -6,23 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "import numpy as np\n",
     "import scipy.optimize as opt\n",
     "\n",
     "from openptv_python.calibration import Calibration\n",
-    "from openptv_python.imgcoord import image_coordinates\n",
-    "from openptv_python.orientation import (\n",
-    "    external_calibration,\n",
-    "    full_calibration\n",
+    "from openptv_python.imgcoord import image_coordinates, img_coord\n",
+    "from openptv_python.orientation import full_calibration\n",
+    "from openptv_python.parameters import (\n",
+    "    OrientPar,\n",
+    "    read_control_par,\n",
+    "    read_target_par,\n",
     ")\n",
-    "from openptv_python.parameters import ControlPar, OrientPar, read_control_par, read_target_par\n",
     "from openptv_python.tracking_frame_buf import Target\n",
-    "from openptv_python.trafo import arr_metric_to_pixel\n",
-    "from openptv_python.imgcoord import img_coord\n",
-    "from openptv_python.trafo import pixel_to_metric\n",
-    "from openptv_python.tracking_frame_buf import Target\n",
-    "\n",
-    "from pathlib import Path\n"
+    "from openptv_python.trafo import arr_metric_to_pixel, pixel_to_metric"
    ]
   },
   {
@@ -31,9 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib widget\n"
+    "\n",
+    "%matplotlib widget"
    ]
   },
   {
@@ -42,8 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from skimage.io import imread\n"
+    "from skimage.io import imread"
    ]
   },
   {
@@ -53,7 +50,7 @@
    "outputs": [],
    "source": [
     "# working directory\n",
-    "work_dir = Path('/home/user/Downloads/For_Alex_test_34')\n",
+    "work_dir = Path(\"/home/user/Downloads/For_Alex_test_34\")\n",
     "par_dir = work_dir / \"parametersRun1_2\"\n",
     "cal_dir = work_dir / \"cal\"\n",
     "res_dir = work_dir / \"res\""
@@ -77,7 +74,7 @@
     "target_parameters_file_name = par_dir / \"targ_rec.par\"\n",
     "# self.control = ControlPar(4)\n",
     "control = read_control_par(control_file_name)\n",
-    "print(control)\n"
+    "print(control)"
    ]
   },
   {
@@ -132,8 +129,8 @@
    ],
    "source": [
     "img = imread(cal_dir / \"cam1.tif\")\n",
-    "img = img[:,:,0].squeeze()\n",
-    "plt.imshow(img, cmap='gray')\n",
+    "img = img[:, :, 0].squeeze()\n",
+    "plt.imshow(img, cmap=\"gray\")\n",
     "plt.show()"
    ]
   },
@@ -170,29 +167,32 @@
    "source": [
     "# detect dots\n",
     "from ipywidgets import interact\n",
+    "\n",
     "from openptv_python.segmentation import target_recognition\n",
     "\n",
     "tpar = read_target_par(target_parameters_file_name)\n",
     "# cal_images=[img]\n",
     "\n",
+    "\n",
     "def f(thresh):\n",
     "    tpar.gvthresh[0] = thresh\n",
-    "    \n",
+    "\n",
     "    detections = []\n",
-    "    \n",
+    "\n",
     "    target_array = target_recognition(img, tpar, 0, control)\n",
     "    target_array.sort(key=lambda t: t.y)\n",
     "    detections.append(target_array)\n",
-    "    \n",
+    "\n",
     "    x = [[_.x for _ in cam] for cam in detections]\n",
     "    y = [[_.y for _ in cam] for cam in detections]\n",
     "\n",
     "    plt.figure()\n",
-    "    plt.imshow(img, cmap='gray')\n",
-    "    plt.scatter(x,y)\n",
+    "    plt.imshow(img, cmap=\"gray\")\n",
+    "    plt.scatter(x, y)\n",
     "    plt.show()\n",
     "\n",
-    "interact(f, thresh = 100)\n"
+    "\n",
+    "interact(f, thresh=100)"
    ]
   },
   {
@@ -248,40 +248,41 @@
     "#     # print(targs)\n",
     "#     # print(control)\n",
     "#     # print(calibration_array)\n",
-    "    \n",
+    "\n",
     "#     c = Calibration()\n",
     "#     c.set_pos(calibration_array[:3])\n",
     "#     c.set_angles(calibration_array[3:])\n",
     "#     c.int_par.cc = cc\n",
     "#     c.update_rotation_matrix()\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "#     # print(f\"{c.get_pos()=}\")\n",
-    "                \n",
+    "\n",
     "#     residual = 0\n",
     "#     for i in range(len(targs)):\n",
     "#         xc, yc = pixel_to_metric(targs[i].x, targs[i].y, control)\n",
     "#         # print(f\"{xc=}, {yc=} mm\")\n",
-    "        \n",
+    "\n",
     "#         xp, yp = img_coord(ref_pts[i], c, control.mm)\n",
     "#         # print(f\"{xp=}, {yp=} mm\")\n",
     "#         residual += ((xc - xp)**2 + (yc - yp)**2)\n",
-    "        \n",
+    "\n",
     "#         # print(f\"{residual=}\")\n",
-    "        \n",
+    "\n",
     "#     return residual"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# x0 = np.hstack([cal.get_pos(), cal.get_angles()])\n",
     "# cc = orig_cal.int_par.cc\n",
     "\n",
-    "# sol = opt.minimize(residual, x0, args=(ref_pts, targs, control, cc), method='Nelder-Mead', tol=1e-6)"
+    "# sol = opt.minimize(residual, x0, args=(ref_pts, targs,\n",
+    "# control, cc), method='Nelder-Mead', tol=1e-6)"
    ]
   },
   {
@@ -293,11 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print( residual(np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]), ref_pts, targs, control, orig_cal.int_par.cc))"
+    "# print( residual(np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]),\n",
+    "# ref_pts, targs, control, orig_cal.int_par.cc))"
    ]
   },
   {
@@ -307,6 +309,8 @@
    "outputs": [],
    "source": [
     "import copy\n",
+    "\n",
+    "\n",
     "def added_par_residual(added_par_array, ref_pts, targs, control, cal):\n",
     "    # print(calibration_array)\n",
     "    # print(ref_pts)\n",
@@ -315,20 +319,20 @@
     "    # print(calibration_array)\n",
     "    c = copy.deepcopy(cal)\n",
     "    c.added_par = added_par_array\n",
-    "    \n",
+    "\n",
     "    # print(f\"{c.get_pos()=}\")\n",
-    "                \n",
+    "\n",
     "    residual = 0\n",
     "    for i in range(len(targs)):\n",
     "        xc, yc = pixel_to_metric(targs[i].x, targs[i].y, control)\n",
     "        # print(f\"{xc=}, {yc=} mm\")\n",
-    "        \n",
+    "\n",
     "        xp, yp = img_coord(ref_pts[i], c, control.mm)\n",
     "        # print(f\"{xp=}, {yp=} mm\")\n",
-    "        residual += ((xc - xp)**2 + (yc - yp)**2)\n",
-    "        \n",
+    "        residual += (xc - xp) ** 2 + (yc - yp) ** 2\n",
+    "\n",
     "        # print(f\"{residual=}\")\n",
-    "        \n",
+    "\n",
     "    return residual"
    ]
   },
@@ -349,10 +353,15 @@
    "source": [
     "x0 = np.array(cal.added_par.tolist())\n",
     "\n",
-    "sol = opt.minimize(added_par_residual, x0, args=(ref_pts, targs, control, cal), method='Nelder-Mead', tol=1e-6)\n",
+    "sol = opt.minimize(\n",
+    "    added_par_residual,\n",
+    "    x0,\n",
+    "    args=(ref_pts, targs, control, cal),\n",
+    "    method=\"Nelder-Mead\",\n",
+    "    tol=1e-6,\n",
+    ")\n",
     "print(f\"{sol.x=}\")\n",
-    "# print(sol.x - np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]))\n",
-    "\n"
+    "# print(sol.x - np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]))"
    ]
   },
   {
@@ -410,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "openptv-python",
    "language": "python",
    "name": "python3"
   },
@@ -424,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
