--- a/tests/test_framebuf.ipynb
+++ b/tests/test_framebuf.ipynb
@@ -15,8 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openptv_python.tracking_frame_buf import Frame, FrameBuf\n",
-    "from collections import deque"
+    "from collections import deque\n",
+    "\n",
+    "from openptv_python.tracking_frame_buf import Frame, FrameBuf"
    ]
   },
   {
@@ -37,7 +38,7 @@
     }
    ],
    "source": [
-    "fb = FrameBuf() # type: ignore"
+    "fb = FrameBuf()  # type: ignore"
    ]
   },
   {
@@ -67,7 +68,7 @@
     }
    ],
    "source": [
-    "fb = FrameBuf(deque([frame]*4))"
+    "fb = FrameBuf(deque([frame] * 4))"
    ]
   },
   {
