--- a/tests/test_match_pairs.ipynb
+++ b/tests/test_match_pairs.ipynb
@@ -2,38 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
-    "import numpy as np\n",
     "import math\n",
-    "from openptv_python.tracking_frame_buf import Frame\n",
-    "from openptv_python.parameters import VolumePar, ControlPar\n",
-    "from openptv_python.calibration import Calibration\n",
-    "from openptv_python.correspondences import Correspond #, match_pairs\n",
-    "from openptv_python.epi import Candidate, Coord2d, epi_mm\n",
-    "from openptv_python.find_candidate import find_start_point\n",
-    "#from openptv_python.correspondences import  match_pairs\n",
-    "# from openptv_python.tracking_frame_buf import Target\n",
-    "MAXCAND = 1000\n",
-    "# import pytest\n",
-    "# from openptv_python.find_candidate import find_candidate\n",
+    "from typing import List\n",
+    "\n",
+    "import numpy as np\n",
     "\n",
     "from openptv_python.calibration import Calibration, read_calibration\n",
     "from openptv_python.constants import MAXCAND\n",
     "from openptv_python.correspondences import (\n",
+    "    Correspond,  # , match_pairs\n",
     "    consistent_pair_matching,\n",
     "    match_pairs,\n",
     "    # py_correspondences,\n",
     "    safely_allocate_adjacency_lists,\n",
     "    safely_allocate_target_usage_marks,\n",
     ")\n",
-    "from openptv_python.epi import Coord2d\n",
+    "from openptv_python.epi import Candidate, Coord2d, epi_mm\n",
+    "from openptv_python.find_candidate import find_start_point\n",
     "from openptv_python.imgcoord import img_coord\n",
-    "from openptv_python.parameters import ControlPar, read_control_par, read_volume_par\n",
-    "from openptv_python.tracking_frame_buf import (\n",
+    "from openptv_python.parameters import (  # noqa: E402\n",
+    "    ControlPar,\n",
+    "    VolumePar,\n",
+    "    read_control_par,\n",
+    "    read_volume_par,\n",
+    ")\n",
+    "from openptv_python.tracking_frame_buf import (  # noqa: E402\n",
     "    Frame,\n",
     "    Target,\n",
     "    # TargetArray,\n",
@@ -42,7 +39,18 @@
     "    n_tupel,\n",
     "    # read_targets,\n",
     ")\n",
-    "from openptv_python.trafo import correct_brown_affine, dist_to_flat, metric_to_pixel, pixel_to_metric"
+    "from openptv_python.trafo import (\n",
+    "    correct_brown_affine,\n",
+    "    dist_to_flat,\n",
+    "    metric_to_pixel,\n",
+    "    pixel_to_metric,\n",
+    ")\n",
+    "\n",
+    "# from openptv_python.correspondences import  match_pairs\n",
+    "# from openptv_python.tracking_frame_buf import Target\n",
+    "# MAXCAND = 1000\n",
+    "# import pytest\n",
+    "# from openptv_python.find_candidate import find_candidate"
    ]
   },
   {
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +108,8 @@
     "            row[part] = Coord2d(frm.targets[cam][part].pnr, x, y)\n",
     "\n",
     "            # print(\n",
-    "            #     f\"frm.targets:{cam},{part},{frm.targets[cam][part].x},{frm.targets[cam][part].y},{frm.targets[cam][part].pnr}\"\n",
+    "            #     f\"frm.targets:{cam},{part},{frm.targets[cam][part].x},\n",
+    "            #   {frm.targets[cam][part].y},{frm.targets[cam][part].pnr}\"\n",
     "            # )\n",
     "            # print(\n",
     "            #     f\"corrected: {row[part].x} {row[part].y} {row[part].pnr}\"\n",
@@ -214,7 +223,7 @@
     "calib = read_all_calibration(cpar.num_cams)\n",
     "frm = generate_test_set(calib, cpar)\n",
     "\n",
-    "corrected = correct_frame(frm, calib, cpar, 0.0001)\n"
+    "corrected = correct_frame(frm, calib, cpar, 0.0001)"
    ]
   },
   {
@@ -314,14 +323,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# print(f\" Corrected \")\n",
     "# for cam in range(cpar.num_cams):\n",
     "#     print(f\"{cam}\")\n",
     "#     for part in corrected[cam]:\n",
     "#             print(part)\n",
     "\n",
-    "corr_lists = safely_allocate_adjacency_lists(cpar.num_cams, frm.num_targets)\n"
+    "corr_lists = safely_allocate_adjacency_lists(cpar.num_cams, frm.num_targets)"
    ]
   },
   {
@@ -341,13 +349,12 @@
     }
    ],
    "source": [
-    "\n",
     "corr_lists[0][1][0].p1, corr_lists[0][1][0].p2[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +364,9 @@
     "#         return 0\n",
     "#     return float(min(a, b) / max(a, b))\n",
     "\n",
-    "quality_ratio = lambda a, b: a / b if a < b else b / a"
+    "\n",
+    "def quality_ratio(a, b):\n",
+    "    return a / b if a < b else b / a"
    ]
   },
   {
@@ -377,7 +386,7 @@
     }
    ],
    "source": [
-    "quality_ratio(5,25), quality_ratio(25,5)"
+    "quality_ratio(5, 25), quality_ratio(25, 5)"
    ]
   },
   {
@@ -427,7 +436,7 @@
     "        cpar: A `control_par` object.\n",
     "        cal: A `Calibration` object.\n",
     "\n",
-    "    Returns:\n",
+    "    Returns\n",
     "    -------\n",
     "        cand: list of candidates, or empty list if nothing is found\n",
     "    \"\"\"\n",
@@ -486,15 +495,13 @@
     "            continue\n",
     "\n",
     "        p2 = crd[j].pnr\n",
-    "        \n",
-    "        if p2 >= num: \n",
+    "\n",
+    "        if p2 >= num:\n",
     "            print(f\"{p2} is larger than {num}\")\n",
     "            return cand\n",
-    "        \n",
     "\n",
     "        # Quality of each parameter is a ratio of the values of the\n",
     "        # size n, nx, ny and sum of grey values sumg.\n",
-    "        \n",
     "\n",
     "        qn = quality_ratio(n, pix[p2].n)\n",
     "        qnx = quality_ratio(nx, pix[p2].nx)\n",
@@ -510,17 +517,16 @@
     "        corr = 4 * qsumg + 2 * qn + qnx + qny\n",
     "\n",
     "        # Prefer matches with brighter targets.\n",
-    "        corr *= (sumg + pix[p2].sumg)\n",
+    "        corr *= sumg + pix[p2].sumg\n",
     "\n",
-    "        \n",
     "        tmp = Candidate(pnr=j, tol=d, corr=corr)\n",
     "        # print(f\" good candidate {tmp} {tmp.pnr},{tmp.tol},{tmp.corr}\")\n",
-    "        \n",
+    "\n",
     "        cand.append(tmp)\n",
-    "        \n",
+    "\n",
     "        if len(cand) >= MAXCAND:\n",
     "            print(f\"More candidates than {MAXCAND}: {len(cand)}\\n\")\n",
-    "            return cand        \n",
+    "            return cand\n",
     "\n",
     "        # cand[count].pnr = j\n",
     "        # cand[count].tol = d\n",
@@ -671,7 +677,6 @@
     }
    ],
    "source": [
-    "\n",
     "# match_pairs(corr_lists, corrected, frm, vpar, cpar, calib)\n",
     "\n",
     "\n",
@@ -730,14 +735,13 @@
     "                cpar.mm,\n",
     "                vpar,\n",
     "            )\n",
-    "            \n",
+    "\n",
     "            # print(xa12, ya12, xb12, yb12)\n",
-    "            \n",
     "\n",
     "            # origin point in the corr_list\n",
     "            corr_lists[i1][i2][i].p1 = i\n",
     "            pt1 = corrected[i1][i].pnr\n",
-    "            \n",
+    "\n",
     "            print(\"looking for dot\")\n",
     "            print(corr_lists[i1][i2][i].p1, pt1)\n",
     "\n",
@@ -759,7 +763,7 @@
     "                cpar,\n",
     "                calib[i2],\n",
     "            )\n",
-    "            \n",
+    "\n",
     "            print(\"after find_candidate\")\n",
     "            print(i1, i2, pt1, cand)\n",
     "\n",
@@ -775,14 +779,11 @@
     "                corr_lists[i1][i2][i].dist[j] = cand[j].tol\n",
     "\n",
     "            corr_lists[i1][i2][i].n = count\n",
-    "            \n",
+    "\n",
     "            print(f\"set {count} values in corr_lists\")\n",
     "            # print(corr_lists[i1][i2][i].p2[j])\n",
     "            # print(corr_lists[i1][i2][i].corr[j])\n",
-    "            # print(corr_lists[i1][i2][i].dist[j])\n",
-    "\n",
-    "\n",
-    "\n"
+    "            # print(corr_lists[i1][i2][i].dist[j])"
    ]
   },
   {
@@ -924,7 +925,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Assert each target has the real matches as candidates\n",
     "for cam in range(cpar.num_cams - 1):\n",
     "    for subcam in range(cam + 1, cpar.num_cams):\n",
@@ -941,14 +941,10 @@
     "            for cand in range(MAXCAND):\n",
     "                print(\n",
     "                    cand,\n",
-    "                    corrected[subcam][\n",
-    "                        corr_lists[cam][subcam][part].p2[cand]\n",
-    "                    ].pnr,\n",
+    "                    corrected[subcam][corr_lists[cam][subcam][part].p2[cand]].pnr,\n",
     "                )\n",
     "                if (\n",
-    "                    corrected[subcam][\n",
-    "                        corr_lists[cam][subcam][part].p2[cand]\n",
-    "                    ].pnr\n",
+    "                    corrected[subcam][corr_lists[cam][subcam][part].p2[cand]].pnr\n",
     "                    == correct_pnr\n",
     "                ):\n",
     "                    found_correct_pnr = True\n",
@@ -984,7 +980,7 @@
     "vpar = VolumePar()\n",
     "cpar = ControlPar()\n",
     "calib = [Calibration() for _ in range(10)]\n",
-    "match_pairs(corr_list, corrected, frm, vpar, cpar, calib)\n"
+    "match_pairs(corr_list, corrected, frm, vpar, cpar, calib)"
    ]
   },
   {
@@ -1002,12 +998,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "assert corr_list[0][1][0].p1 == 0\n",
     "assert corr_list[0][1][0].p2[0] == 1\n",
     "assert corr_list[0][1][0].corr[0] == 0.5\n",
     "assert corr_list[0][1][0].dist[0] == 1.0\n",
-    "assert corr_list[0][1][0].n == 1\n"
+    "assert corr_list[0][1][0].n == 1"
    ]
   },
   {
@@ -1016,7 +1011,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Test case 2\n",
     "corr_list = [[[Correspond() for _ in range(5)] for _ in range(5)] for _ in range(5)]\n",
     "corrected = [[Coord2d() for _ in range(5)] for _ in range(5)]\n",
@@ -1029,13 +1023,13 @@
     "assert corr_list[2][3][1].p2[0] == 2\n",
     "assert corr_list[2][3][1].corr[0] == 0.8\n",
     "assert corr_list[2][3][1].dist[0] == 1.2\n",
-    "assert corr_list[2][3][1].n == 1\n"
+    "assert corr_list[2][3][1].n == 1"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "openptv-python",
    "language": "python",
    "name": "python3"
   },
@@ -1049,7 +1043,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
