--- a/tests/timing_skew_midpoint.ipynb
+++ b/tests/timing_skew_midpoint.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext line_profiler\n"
+    "%load_ext line_profiler"
    ]
   },
   {
@@ -15,14 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "from typing import Tuple\n",
     "\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
     "def skew_midpoint(\n",
-    "    vert1: np.ndarray, \n",
-    "    direct1: np.ndarray, \n",
-    "    vert2: np.ndarray, \n",
-    "    direct2: np.ndarray\n",
+    "    vert1: np.ndarray, direct1: np.ndarray, vert2: np.ndarray, direct2: np.ndarray\n",
     ") -> Tuple[float, np.ndarray]:\n",
     "    \"\"\"Find the midpoint of the line segment that is the shortest distance.\"\"\"\n",
     "    perp_both = np.cross(direct1, direct2)\n",
@@ -48,7 +47,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a,b,c,d = np.array([0,0,0]), np.array([4, 5, 6]), np.array([7, 8, 9]), np.array([10, 11, 12])"
+    "a, b, c, d = (\n",
+    "    np.array([0, 0, 0]),\n",
+    "    np.array([4, 5, 6]),\n",
+    "    np.array([7, 8, 9]),\n",
+    "    np.array([10, 11, 12]),\n",
+    ")"
    ]
   },
   {
