--- a/tests/test_calibration_optimize.ipynb
+++ b/tests/test_calibration_optimize.ipynb
@@ -19,17 +19,11 @@
     "import scipy.optimize as opt\n",
     "\n",
     "from openptv_python.calibration import Calibration\n",
-    "from openptv_python.imgcoord import image_coordinates\n",
-    "from openptv_python.orientation import (\n",
-    "    external_calibration,\n",
-    "    full_calibration\n",
-    ")\n",
-    "from openptv_python.parameters import ControlPar, OrientPar, read_control_par\n",
+    "from openptv_python.imgcoord import image_coordinates, img_coord\n",
+    "from openptv_python.orientation import external_calibration, full_calibration\n",
+    "from openptv_python.parameters import OrientPar, read_control_par\n",
     "from openptv_python.tracking_frame_buf import Target\n",
-    "from openptv_python.trafo import arr_metric_to_pixel\n",
-    "from openptv_python.imgcoord import img_coord\n",
-    "from openptv_python.trafo import pixel_to_metric\n",
-    "from openptv_python.tracking_frame_buf import Target\n"
+    "from openptv_python.trafo import arr_metric_to_pixel, pixel_to_metric"
    ]
   },
   {
@@ -38,7 +32,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "control_file_name = \"testing_folder/corresp/control.par\"\n",
     "# self.control = ControlPar(4)\n",
     "control = read_control_par(control_file_name)\n",
@@ -78,28 +71,14 @@
     "\n",
     "external_calibration(cal, ref_pts, targets, control)\n",
     "\n",
-    "np.testing.assert_array_almost_equal(\n",
-    "    cal.get_angles(), orig_cal.get_angles(), decimal=3\n",
-    ")\n",
-    "np.testing.assert_array_almost_equal(\n",
-    "    cal.get_pos(), orig_cal.get_pos(), decimal=3\n",
-    ")\n",
+    "np.testing.assert_array_almost_equal(cal.get_angles(), orig_cal.get_angles(), decimal=3)\n",
+    "np.testing.assert_array_almost_equal(cal.get_pos(), orig_cal.get_pos(), decimal=3)\n",
     "\n",
     "\n",
-    "_, _, _ = full_calibration(\n",
-    "            cal,\n",
-    "            ref_pts,\n",
-    "            targets,\n",
-    "            control,\n",
-    "            orient_par\n",
-    "            )\n",
+    "_, _, _ = full_calibration(cal, ref_pts, targets, control, orient_par)\n",
     "\n",
-    "np.testing.assert_array_almost_equal(\n",
-    "    cal.get_angles(), orig_cal.get_angles(), decimal=3\n",
-    ")\n",
-    "np.testing.assert_array_almost_equal(\n",
-    "    cal.get_pos(), orig_cal.get_pos(), decimal=3\n",
-    ")"
+    "np.testing.assert_array_almost_equal(cal.get_angles(), orig_cal.get_angles(), decimal=3)\n",
+    "np.testing.assert_array_almost_equal(cal.get_pos(), orig_cal.get_pos(), decimal=3)"
    ]
   },
   {
@@ -120,7 +99,8 @@
     ")\n",
     "orig_cal = Calibration().from_file(\n",
     "    \"testing_folder/calibration/cam1.tif.ori\",\n",
-    "    \"testing_folder/calibration/cam1.tif.addpar\")"
+    "    \"testing_folder/calibration/cam1.tif.addpar\",\n",
+    ")"
    ]
   },
   {
@@ -176,27 +156,27 @@
     "#     # print(targs)\n",
     "#     # print(control)\n",
     "#     # print(calibration_array)\n",
-    "    \n",
+    "\n",
     "#     c = Calibration()\n",
     "#     c.set_pos(calibration_array[:3])\n",
     "#     c.set_angles(calibration_array[3:])\n",
     "#     c.int_par.cc = cc\n",
     "#     c.update_rotation_matrix()\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "#     # print(f\"{c.get_pos()=}\")\n",
-    "                \n",
+    "\n",
     "#     residual = 0\n",
     "#     for i in range(len(targs)):\n",
     "#         xc, yc = pixel_to_metric(targs[i].x, targs[i].y, control)\n",
     "#         # print(f\"{xc=}, {yc=} mm\")\n",
-    "        \n",
+    "\n",
     "#         xp, yp = img_coord(ref_pts[i], c, control.mm)\n",
     "#         # print(f\"{xp=}, {yp=} mm\")\n",
     "#         residual += ((xc - xp)**2 + (yc - yp)**2)\n",
-    "        \n",
+    "\n",
     "#         # print(f\"{residual=}\")\n",
-    "        \n",
+    "\n",
     "#     return residual"
    ]
   },
@@ -221,11 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print( residual(np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]), ref_pts, targs, control, orig_cal.int_par.cc))"
+    "# print( residual(np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]),\n",
+    "# ref_pts, targs, control, orig_cal.int_par.cc))"
    ]
   },
   {
@@ -235,6 +216,8 @@
    "outputs": [],
    "source": [
     "import copy\n",
+    "\n",
+    "\n",
     "def added_par_residual(added_par_array, ref_pts, targs, control, cal):\n",
     "    # print(calibration_array)\n",
     "    # print(ref_pts)\n",
@@ -243,20 +226,20 @@
     "    # print(calibration_array)\n",
     "    c = copy.deepcopy(cal)\n",
     "    c.added_par = added_par_array\n",
-    "    \n",
+    "\n",
     "    # print(f\"{c.get_pos()=}\")\n",
-    "                \n",
+    "\n",
     "    residual = 0\n",
     "    for i in range(len(targs)):\n",
     "        xc, yc = pixel_to_metric(targs[i].x, targs[i].y, control)\n",
     "        # print(f\"{xc=}, {yc=} mm\")\n",
-    "        \n",
+    "\n",
     "        xp, yp = img_coord(ref_pts[i], c, control.mm)\n",
     "        # print(f\"{xp=}, {yp=} mm\")\n",
-    "        residual += ((xc - xp)**2 + (yc - yp)**2)\n",
-    "        \n",
+    "        residual += (xc - xp) ** 2 + (yc - yp) ** 2\n",
+    "\n",
     "        # print(f\"{residual=}\")\n",
-    "        \n",
+    "\n",
     "    return residual"
    ]
   },
@@ -277,10 +260,15 @@
    "source": [
     "x0 = np.array(cal.added_par.tolist())\n",
     "\n",
-    "sol = opt.minimize(added_par_residual, x0, args=(ref_pts, targs, control, cal), method='Nelder-Mead', tol=1e-6)\n",
+    "sol = opt.minimize(\n",
+    "    added_par_residual,\n",
+    "    x0,\n",
+    "    args=(ref_pts, targs, control, cal),\n",
+    "    method=\"Nelder-Mead\",\n",
+    "    tol=1e-6,\n",
+    ")\n",
     "print(f\"{sol.x=}\")\n",
-    "# print(sol.x - np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]))\n",
-    "\n"
+    "# print(sol.x - np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]))"
    ]
   },
   {
@@ -338,7 +326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openptvpy",
+   "display_name": "openptv-python",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
