--- a/tests/test_corresp.ipynb
+++ b/tests/test_corresp.ipynb
@@ -33,21 +33,20 @@
     "    n_tupel,\n",
     "    read_targets,\n",
     ")\n",
-    "from openptv_python.trafo import dist_to_flat, metric_to_pixel, pixel_to_metric\n",
-    "\n"
+    "from openptv_python.trafo import dist_to_flat, metric_to_pixel, pixel_to_metric"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_test(tcls):\n",
     "    \"\"\"\n",
     "    Runs unit tests from a test class\n",
-    "    :param tcls: A class, derived from unittest.TestCase\n",
-    "    \"\"\"\n",
+    "    :param tcls: A class, derived from unittest.TestCase.\n",
+    "    \"\"\"  # noqa: D205, D401\n",
     "    suite = unittest.TestLoader().loadTestsFromTestCase(tcls)\n",
     "    runner = unittest.TextTestRunner(verbosity=2)\n",
     "    runner.run(suite)"
@@ -66,7 +65,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def read_all_calibration(num_cams: int = 4) -> list[Calibration]:\n",
     "    \"\"\"Read all calibration files.\"\"\"\n",
     "    ori_tmpl = \"tests/testing_fodder/cal/sym_cam%d.tif.ori\"\n",
@@ -78,7 +76,7 @@
     "        ori_name = ori_tmpl % (cam + 1)\n",
     "        calib.append(read_calibration(ori_name, added_name))\n",
     "\n",
-    "    return calib\n"
+    "    return calib"
    ]
   },
   {
@@ -123,7 +121,7 @@
     "        # This is expected by find_candidate()\n",
     "        corrected[cam].sort(key=lambda coord: coord.x)\n",
     "\n",
-    "    return corrected\n"
+    "    return corrected"
    ]
   },
   {
@@ -167,8 +165,7 @@
     "                targ.nx = targ.ny = 5\n",
     "                targ.sumg = 10\n",
     "\n",
-    "    return frm\n",
-    "\n"
+    "    return frm"
    ]
   },
   {
@@ -562,8 +559,7 @@
     "                        ):\n",
     "                            break\n",
     "\n",
-    "                    self.assertFalse(cand == MAXCAND)\n",
-    "\n"
+    "                    self.assertFalse(cand == MAXCAND)"
    ]
   },
   {
@@ -621,7 +617,7 @@
     "\n",
     "\n",
     "# if __name__ == \"__main__\":\n",
-    "#     unittest.main()\n"
+    "#     unittest.main()"
    ]
   },
   {
