--- a/tests/test_take_best_candidates.ipynb
+++ b/tests/test_take_best_candidates.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "import unittest\n",
-    "from typing import List, Optional\n",
-    "from dataclasses import dataclass\n",
-    "\n"
+    "from typing import List"
    ]
   },
   {
@@ -23,15 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_test(tcls):\n",
-    "    \"\"\"\n",
-    "    Runs unit tests from a test class\n",
-    "    :param tcls: A class, derived from unittest.TestCase\n",
-    "    \"\"\"\n",
+    "    \"\"\"Runs unit tests from a test class\n",
+    "    :param tcls: A class, derived from unittest.TestCase.\n",
+    "    \"\"\"  # noqa: D205, D401\n",
     "    suite = unittest.TestLoader().loadTestsFromTestCase(tcls)\n",
     "    runner = unittest.TextTestRunner(verbosity=2)\n",
     "    runner.run(suite)"
@@ -43,8 +40,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def take_best_candidates(src: List[n_tupel], dst: List[n_tupel], num_cams: int, num_cands: int, tusage: List[List[int]]) -> int:\n",
+    "def take_best_candidates(\n",
+    "    src: List[n_tupel],\n",
+    "    dst: List[n_tupel],\n",
+    "    num_cams: int,\n",
+    "    num_cands: int,\n",
+    "    tusage: List[List[int]],\n",
+    ") -> int:\n",
     "    taken: int = 0\n",
     "\n",
     "    # Sort candidates by match quality (.corr)\n",
@@ -73,8 +75,7 @@
     "        dst[taken] = src[cand]\n",
     "        taken += 1\n",
     "\n",
-    "    return taken\n",
-    "\n"
+    "    return taken"
    ]
   },
   {
@@ -114,7 +115,7 @@
     "            n_tupel(p=[0, 1, 2, 3], corr=0.9),\n",
     "            n_tupel(p=[1, 2, 3, 4], corr=0.8),\n",
     "            n_tupel(p=[2, 3, 4, 5], corr=0.7),\n",
-    "            n_tupel(p=[3, 4, 5, 6], corr=0.6)\n",
+    "            n_tupel(p=[3, 4, 5, 6], corr=0.6),\n",
     "        ]\n",
     "        dst = [None] * len(src)\n",
     "        num_cams = 4\n",
@@ -131,7 +132,7 @@
     "            n_tupel(p=[0, 1, 2, -1], corr=0.9),\n",
     "            n_tupel(p=[1, 2, 3, -1], corr=0.8),\n",
     "            n_tupel(p=[2, 3, 4, -1], corr=0.7),\n",
-    "            n_tupel(p=[3, 4, 5, -1], corr=0.6)\n",
+    "            n_tupel(p=[3, 4, 5, -1], corr=0.6),\n",
     "        ]\n",
     "        dst = [None] * len(src)\n",
     "        num_cams = 4\n",
@@ -148,7 +149,7 @@
     "            n_tupel(p=[0, 1, -1, -1], corr=0.9),\n",
     "            n_tupel(p=[1, 2, -1, -1], corr=0.8),\n",
     "            n_tupel(p=[2, 3, -1, -1], corr=0.7),\n",
-    "            n_tupel(p=[3, 4, -1, -1], corr=0.6)\n",
+    "            n_tupel(p=[3, 4, -1, -1], corr=0.6),\n",
     "        ]\n",
     "        dst = [None] * len(src)\n",
     "        num_cams = 4\n",
@@ -176,13 +177,13 @@
     "\n",
     "\n",
     "# if __name__ == '__main__':\n",
-    "# \n"
+    "#"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openptvpy",
+   "display_name": "openptv-python",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
